# aoc2024

./: .gitignore  README.md
.docker/: Dockerfile
Day01/: CMakeLists.txt  answers.txt  main.c
Day02/: CMakeLists.txt  answers.txt  main.c
Day03/: CMakeLists.txt  answers.txt  main.c
Day04/: CMakeLists.txt  main  main.c
Day05/: CMakeLists.txt  answers.txt  main.c
Day06/: CMakeLists.txt  answers.txt  main.c
Day07/: CMakeLists.txt  answers.txt  main.c
Day08/: CMakeLists.txt  main.c
Day09/: CMakeLists.txt  answers.txt  main.c
Day10/: CMakeLists.txt  answers.txt  main.c
Day11/: CMakeLists.txt  main.c
Day12/: CMakeLists.txt  main.c
Day13/: CMakeLists.txt  answers.txt  main.c
Day14/: CMakeLists.txt  answers.txt  main.c
Day15/: CMakeLists.txt  main.c
Day17/: CMakeLists.txt  main.c
Day18/: CMakeLists.txt  answers.txt  input.txt  main.c
